2003-10-29  Michael Meeks  <michael@ximian.com>

	* Makefile.am (DISTCLEANFILES): add .

2003-10-29  Michael Meeks  <michael@ximian.com>

	* Version 2.4.1

2003-10-29  Steve Chaplin  <stevech1097@yahoo.com.au>

	* configure.in: add setup for PKG_CONFIG,
	fixing configure bug.

2003-10-08  Mark McLoughlin  <mark@skynet.ie>

	* COPYING.LIB: added LGPL. COPYING is GPL.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mr" to ALL_LINGUAS.

2003-09-28  Gediminas Paulauskas  <menesis@delfi.lt>

	* configure.in: Added lt to ALL_LINGUAS.

2003-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-ui-sync-menu.h:
	* bonobo/bonobo-ui-sync-toolbar.h: Added missing
	prototypes to get rid of warnings. Fixes bug #122757.

2003-09-15  Martin Kretzschmar  <m_kretzschmar@gmx.net>

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build)
	(impl_bonobo_ui_sync_menu_build_placeholder): use
	gtk_separator_menu_item_new to create separators, fixes #122314
	( screen reader menu item count) (Michael gave the hint).

2003-09-09  Taneem Ahmed  <taneem@bengalinux.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-08-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-31  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-27  Michael Meeks  <michael@ximian.com>

	* Version 2.4.0

2003-08-22  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS.
	
2003-08-21  Martin Kretzschmar  <m_kretzschmar@gmx.net>

       * samples/container/bonobo-sample-container.c: define
         POPT_TABLEEND when compiling with older popt

2003-08-11  Michael Meeks  <michael@ximian.com>

	* Version 2.3.6

2003-08-06  Yuedong Du  <yuedong.du@sun.com>

	* bonobo/bonobo-ui-util.c: (bonobo_ui_util_build_help_menu): add
	shortcut F1 to help menu entry, fix bug 47376

2003-08-04  Federico Mena Quintero  <federico@ximian.com>

	Fixes #118705.
