@@ -46,9 +46,10 @@ typedef struct {
 
 	POA_Bonobo_Control__epv epv;
 
-	gpointer dummy[3];
+	gpointer dummy[2];
 
 	/* Signals. */
+	void (*plug_created)   (BonoboControl *control);
 	void (*disconnected)   (BonoboControl *control);
 	void (*set_frame)      (BonoboControl *control);
 	void (*activate)       (BonoboControl *control, gboolean state);
@@ -81,6 +82,7 @@ void                        bonobo_control_unset_transient_for     (BonoboContro
 GType                       bonobo_control_get_type                (void) G_GNUC_CONST;
 BonoboControl              *bonobo_control_construct               (BonoboControl       *control,
 								    GtkWidget           *widget);
+BonoboPlug                 *bonobo_control_get_plug                (BonoboControl       *control);
 BonoboUIComponent          *bonobo_control_get_ui_component        (BonoboControl       *control);
 void                        bonobo_control_set_ui_component        (BonoboControl       *control,
 								    BonoboUIComponent   *component);
